homework4 with HTML5 range slider

--- a/views/search.html
+++ b/views/search.html
@@ -1,4 +1,9 @@
 <div ng-controller="SearchController as ctrl">
+
+    <div class="row well">
+        <auction-search-form></auction-search-form>
+    </div>
+
   <h2 class="well well-sm" id="app-heading">
       Search Results
   </h2>
